# nxpkgx

./: .eslintignore  .gitattributes  .gitignore  .prettierignore  clippy.toml  nxpkgw.js  pnpm-workspace.yaml  socket.yaml  troubleshooting.md  tsconfig.json  tsconfig.project.json
crates/node-file-trace/: Cargo.toml
crates/node-file-trace/src/: lib.rs  main.rs  nft_json.rs
crates/nxpkg-tasks-bytes/: Cargo.toml
crates/nxpkg-tasks-bytes/src/: bytes.rs  lib.rs
crates/nxpkg-tasks-env/: Cargo.toml
crates/nxpkg-tasks-env/src/: command_line.rs  custom.rs  dotenv.rs  filter.rs  lib.rs
crates/nxpkg-tasks-fetch/: Cargo.toml  build.rs
crates/nxpkg-tasks-fetch/src/: lib.rs
crates/nxpkg-tasks-fetch/tests/: fetch.rs
crates/nxpkg-tasks-macros-tests/: Cargo.toml
crates/nxpkg-tasks-macros-tests/tests/: task_input.rs  value_debug.rs
crates/nxpkgpack/: Cargo.toml  README.md  architecture.md
crates/nxpkgpack-binding/: Cargo.toml  README.md
crates/nxpkgpack-binding/src/: lib.rs
crates/nxpkgpack-cli/: Cargo.toml
crates/nxpkgpack-cli/benches/: bundler.rs  mod.rs
crates/nxpkgpack-cli/js/: package.json
crates/nxpkgpack-cli/src/: arguments.rs  contexts.rs  embed_js.rs  lib.rs  main.rs  util.rs
crates/nxpkgpack-cli/src/dev/: mod.rs  nxpkg_tasks_viz.rs  web_entry_source.rs
crates/nxpkgpack-core/: Cargo.toml  build.rs
crates/nxpkgpack-core/src/: asset.rs  changed.rs  code_builder.rs  compile_time_info.rs  context.rs  environment.rs  error.rs  file_source.rs  ident.rs  lib.rs  module.rs  output.rs  package_json.rs  proxied_asset.rs  raw_module.rs  raw_output.rs  reference_type.rs  server_fs.rs  source.rs  source_pos.rs  source_transform.rs  target.rs  version.rs  virtual_output.rs  virtual_source.rs
crates/nxpkgpack-core/src/chunk/: availability_info.rs  available_chunk_items.rs  chunk_group.rs  chunking.rs  chunking_context.rs  containment_tree.rs  data.rs  evaluate.rs  mod.rs  optimize.rs  passthrough_asset.rs
crates/nxpkgpack-core/src/diagnostics/: mod.rs
crates/nxpkgpack-core/src/introspect/: mod.rs  module.rs  output_asset.rs  source.rs  utils.rs
crates/nxpkgpack-core/src/issue/: analyze.rs  code_gen.rs  mod.rs  resolve.rs  unsupported_module.rs
crates/nxpkgpack-core/src/reference/: mod.rs  source_map.rs
crates/nxpkgpack-core/src/resolve/: alias_map.rs  mod.rs  node.rs  options.rs  origin.rs  parse.rs  pattern.rs  plugin.rs  remap.rs
crates/nxpkgpack-core/src/source_map/: mod.rs  source_map_asset.rs
crates/nxpkgpack-core/tests/: source_map.rs
crates/nxpkgpack-css/: Cargo.toml
crates/nxpkgpack-css/src/: asset.rs  code_gen.rs  embed.rs  global_asset.rs  lib.rs  module_asset.rs  parse.rs  util.rs
crates/nxpkgpack-css/src/chunk/: mod.rs  source_map.rs  writer.rs
crates/nxpkgpack-css/src/references/: compose.rs  import.rs  internal.rs  mod.rs  url.rs
crates/nxpkgpack-css/src/transform/: mod.rs
crates/nxpkgpack-dev/: Cargo.toml
crates/nxpkgpack-dev-server/: Cargo.toml
crates/nxpkgpack-dev-server/src/: html.rs  http.rs  invalidation.rs  lib.rs
crates/nxpkgpack-dev-server/src/introspect/: mod.rs
crates/nxpkgpack-dev-server/src/source/: asset_graph.rs  combined.rs  conditional.rs  headers.rs  issue_context.rs  lazy_instantiated.rs  mod.rs  query.rs  resolve.rs  route_tree.rs  router.rs  static_assets.rs  wrapping_source.rs
crates/nxpkgpack-dev-server/src/update/: server.rs  stream.rs
crates/nxpkgpack-dev/src/: chunking_context.rs  lib.rs  react_refresh.rs
crates/nxpkgpack-dev/src/ecmascript/: chunk.rs  content.rs  content_entry.rs  runtime.rs  update.rs  version.rs
crates/nxpkgpack-ecmascript-plugins/: Cargo.toml
crates/nxpkgpack-ecmascript-plugins/src/: lib.rs
crates/nxpkgpack-ecmascript-plugins/src/transform/: emotion.rs  modularize_imports.rs  relay.rs  styled_components.rs  styled_jsx.rs  swc_ecma_transform_plugins.rs
crates/nxpkgpack-ecmascript-runtime/: Cargo.toml  README.md
crates/nxpkgpack-ecmascript-runtime/js/: package.json
crates/nxpkgpack-ecmascript-runtime/src/: asset_context.rs  build_runtime.rs  dev_runtime.rs  dummy_runtime.rs  embed_js.rs  lib.rs  runtime_type.rs
crates/nxpkgpack-env/: Cargo.toml
crates/nxpkgpack-env/src/: asset.rs  dotenv.rs  embeddable.rs  issue.rs  lib.rs  try_env.rs
crates/nxpkgpack-image/: Cargo.toml
crates/nxpkgpack-image/src/: lib.rs
crates/nxpkgpack-image/src/process/: mod.rs
crates/nxpkgpack-mdx/: Cargo.toml
crates/nxpkgpack-mdx/src/: lib.rs
crates/nxpkgpack-node/: Cargo.toml
crates/nxpkgpack-node/js/: package.json
crates/nxpkgpack-node/js/src/: globals.ts
crates/nxpkgpack-node/src/: bootstrap.rs  debug.rs  embed_js.rs  evaluate.rs  execution_context.rs  lib.rs  node_entry.rs  pool.rs  route_matcher.rs
crates/nxpkgpack-node/src/render/: error_page.rs  issue.rs  mod.rs  node_api_source.rs  render_proxy.rs  render_static.rs  rendered_source.rs
crates/nxpkgpack-node/src/source_map/: content_source.rs  mod.rs  trace.rs
crates/nxpkgpack-static/: Cargo.toml
crates/nxpkgpack-static/src/: fixed.rs  lib.rs  output_asset.rs
crates/nxpkgpack-swc-utils/: Cargo.toml
crates/nxpkgpack-swc-utils/src/: emitter.rs
crates/nxpkgpack-test-utils/: Cargo.toml
crates/nxpkgpack-test-utils/src/: jest.rs  snapshot.rs
crates/nxpkgpack-tests/: Cargo.toml  README.md  build.rs
crates/nxpkgpack-tests/js/: jest-entry.ts  jest-runtime.ts
crates/nxpkgpack-tests/tests/: execution.rs  snapshot.rs  util.rs
crates/nxpkgpack-wasm/: Cargo.toml
crates/nxpkgpack-wasm/src/: analysis.rs  lib.rs  loader.rs  module_asset.rs  output_asset.rs  raw.rs  source.rs
crates/nxpkgpack/benches/: node_file_trace.rs
crates/nxpkgpack/examples/: nxpkgpack.rs
crates/nxpkgpack/src/: condition.rs  evaluate_context.rs  lib.rs  resolve.rs  resolve_options_context.rs  unsupported_sass.rs
crates/nxpkgpack/src/graph/: mod.rs
crates/nxpkgpack/tests/: node-file-trace.rs
crates/nxpkgrepo-ffi/: Cargo.toml  README.md  messages.proto
crates/nxpkgrepo-ffi/src/: lib.rs  lockfile.rs
crates/nxpkgrepo-repository/: Cargo.toml
crates/nxpkgrepo-repository/src/: inference.rs  package_json.rs
(+966 files in other folders)
