[package]
name = "nxpkg-tasks-env"
version = "0.1.0"
description = "TBD"
license = "MPL-2.0"
edition = "2021"

[lib]
bench = false

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
dotenvs = "0.1.0"
indexmap = { workspace = true, features = ["serde"] }
serde = { workspace = true }
nxpkg-tasks = { workspace = true }
nxpkg-tasks-fs = { workspace = true }

[build-dependencies]
nxpkg-tasks-build = { workspace = true }
