[package]
name = "nxpkgpack-binding"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
autobenches = false

[lib]
bench = false

[features]
__swc = []
__swc_core = ["__swc"]
__swc_core_next_core = [
  "__swc_core",
  "swc_core/common_concurrent",
  "swc_core/ecma_ast",
  "swc_core/ecma_visit",
  "swc_core/ecma_loader_node",
  "swc_core/ecma_loader_lru",
  "swc_core/ecma_utils",
  "swc_core/ecma_minifier",
  "swc_core/ecma_transforms",
  "swc_core/ecma_transforms_react",
  "swc_core/ecma_transforms_typescript",
  "swc_core/ecma_transforms_optimization",
  "swc_core/ecma_parser",
  "swc_core/ecma_parser_typescript",
  "swc_core/cached",
  "swc_core/base",
]

__swc_core_binding_napi = [
  "__swc_core",
  "swc_core/base_concurrent",
  "swc_core/base_node",
  "swc_core/common_concurrent",
  "swc_core/ecma_ast",
  "swc_core/ecma_loader_node",
  "swc_core/ecma_loader_lru",
  "swc_core/bundler",
  "swc_core/bundler_concurrent",
  "swc_core/ecma_codegen",
  "swc_core/ecma_minifier",
  "swc_core/ecma_parser",
  "swc_core/ecma_parser_typescript",
  "swc_core/ecma_transforms",
  "swc_core/ecma_transforms_optimization",
  "swc_core/ecma_transforms_react",
  "swc_core/ecma_transforms_typescript",
  "swc_core/ecma_utils",
  "swc_core/ecma_visit",
]
__swc_core_binding_napi_plugin = [
  "swc_core/plugin_transform_host_native",
  "nxpkgpack-ecmascript-plugins/swc_ecma_transform_plugin",
]
__swc_core_binding_napi_plugin_filesystem_cache = [
  "swc_core/plugin_transform_host_native_filesystem_cache",
]
__swc_core_binding_napi_plugin_shared_runtime = [
  "swc_core/plugin_transform_host_native_shared_runtime",
]
__swc_core_binding_napi_allocator = ["swc_core/allocator_node"]

__swc_core_binding_wasm = [
  "__swc_core",
  "swc_core/common_concurrent",
  "swc_core/binding_macro_wasm",
  "swc_core/ecma_codegen",
  "swc_core/ecma_minifier",
  "swc_core/ecma_transforms",
  "swc_core/ecma_transforms_typescript",
  "swc_core/ecma_transforms_optimization",
  "swc_core/ecma_transforms_react",
  "swc_core/ecma_parser",
  "swc_core/ecma_parser_typescript",
  "swc_core/ecma_utils",
  "swc_core/ecma_visit",
]
__swc_core_binding_wasm_plugin = ["swc_core/plugin_transform_host_js"]

__swc_core_testing_transform = ["swc_core/testing_transform"]

__nxpkg = []
__nxpkg_tasks_malloc = ["__nxpkg", "nxpkg-tasks-malloc"]
__nxpkg_tasks_malloc_custom_allocator = ["nxpkg-tasks-malloc/custom_allocator"]
__nxpkg_tasks = ["__nxpkg", "nxpkg-tasks"]
__nxpkg_tasks_tokio_tracing = ["nxpkg-tasks/tokio_tracing"]
__nxpkg_tasks_build = ["__nxpkg", "nxpkg-tasks-build"]
__nxpkg_tasks_bytes = ["__nxpkg", "nxpkg-tasks-bytes"]
__nxpkg_tasks_env = ["__nxpkg", "nxpkg-tasks-env"]
__nxpkg_tasks_fetch = ["__nxpkg", "nxpkg-tasks-fetch"]
__nxpkg_tasks_fetch_native-tls = ["__nxpkg", "nxpkg-tasks-fetch/native-tls"]
__nxpkg_tasks_fetch_rustls-tls = ["__nxpkg", "nxpkg-tasks-fetch/rustls-tls"]
__nxpkg_tasks_fs = ["__nxpkg", "nxpkg-tasks-fs"]
__nxpkg_tasks_fs_dynamic_embed_contents = [
  "nxpkg-tasks-fs/dynamic_embed_contents",
]
__nxpkg_tasks_hash = ["__nxpkg", "nxpkg-tasks-hash"]
__nxpkg_tasks_macros = ["__nxpkg", "nxpkg-tasks-macros"]
__nxpkg_tasks_macros_shared = ["__nxpkg", "nxpkg-tasks-macros-shared"]
__nxpkg_tasks_memory = ["__nxpkg", "nxpkg-tasks-memory"]
__nxpkg_tasks_memory_print_task_invalidation = [
  "__nxpkg_tasks_memory",
  "nxpkg-tasks-memory/print_task_invalidation",
]
__nxpkg_tasks_testing = ["__nxpkg", "nxpkg-tasks-testing"]
__nxpkg_updater = ["__nxpkg", "nxpkg-updater"]

__nxpkgpack = ["nxpkgpack"]
__nxpkgpack_bench = ["__nxpkgpack", "nxpkgpack-bench"]
__nxpkgpack_build = ["__nxpkgpack", "nxpkgpack-build"]
__nxpkgpack_build_dynamic_embed_contents = [
  "nxpkgpack-build/dynamic_embed_contents",
]
__nxpkgpack_cli_utils = ["__nxpkgpack", "nxpkgpack-cli-utils"]
__nxpkgpack_core = ["__nxpkgpack", "nxpkgpack-core"]
__nxpkgpack_core_issue_path = ["nxpkgpack-core/issue_path"]
__nxpkgpack_create_test_app = ["__nxpkgpack", "nxpkgpack-create-test-app"]
__nxpkgpack_css = ["__nxpkgpack", "nxpkgpack-css"]
__nxpkgpack_dev = ["__nxpkgpack", "nxpkgpack-dev"]
__nxpkgpack_dev_dynamic_embed_contents = [
  "nxpkgpack-dev/dynamic_embed_contents",
]
__nxpkgpack_dev_server = ["__nxpkgpack", "nxpkgpack-dev-server"]
__nxpkgpack_ecmascript = ["__nxpkgpack", "nxpkgpack-ecmascript"]
# [Note]: currently all of the transform features are enabled by default
__nxpkgpack_ecmascript_plugin = [
  "__nxpkgpack",
  "nxpkgpack-ecmascript-plugins",
  "nxpkgpack-ecmascript-plugins/transform_emotion",
]
__nxpkgpack_ecmascript_runtime = ["__nxpkgpack", "nxpkgpack-ecmascript-runtime"]
__nxpkgpack_ecmascript_hmr_protocol = [
  "__nxpkgpack",
  "nxpkgpack-ecmascript-hmr-protocol",
]

__nxpkgpack_env = ["__nxpkgpack", "nxpkgpack-env"]
__nxpkgpack_image = ["__nxpkgpack", "nxpkgpack-image"]
__nxpkgpack_image_avif = ["nxpkgpack-image/avif"]
__nxpkgpack_image_webp = ["nxpkgpack-image/webp"]
__nxpkgpack_json = ["__nxpkgpack", "nxpkgpack-json"]
__nxpkgpack_mdx = ["__nxpkgpack", "nxpkgpack-mdx"]
__nxpkgpack_node = ["__nxpkgpack", "nxpkgpack-node"]
__nxpkgpack_node_dynamic_embed_contents = [
  "nxpkgpack-node/dynamic_embed_contents",
]
__nxpkgpack_static = ["__nxpkgpack", "nxpkgpack-static"]
__nxpkgpack_swc_utils = ["__nxpkgpack", "nxpkgpack-swc-utils"]
__nxpkgpack_test_utils = ["__nxpkgpack", "nxpkgpack-test-utils"]
__nxpkgpack_tests = ["__nxpkgpack", "nxpkgpack-tests"]

__features = []
__feature_mdx_rs = ["__features", "mdxjs/serializable"]
__feature_node_file_trace = ["__features", "node-file-trace/node-api"]
__feature_node_file_trace_cli = ["node-file-trace/cli"]
__feature_node_file_trace_custom_allocator = [
  "node-file-trace/custom_allocator",
]
__feature_auto_hash_map = ["__features", "auto-hash-map"]
__feature_swc_ast_explorer = ["__features", "swc-ast-explorer"]
__feature_tracing_signpost = ["__features", "tracing-signpost"]

__swc_custom_transform = []
__swc_transform_styled_components = [
  "__swc",
  "__swc_custom_transform",
  "styled_components",
]
__swc_transform_styled_jsx = ["__swc", "__swc_custom_transform", "styled_jsx"]
__swc_transform_emotion = ["__swc", "__swc_custom_transform", "swc_emotion"]
__swc_transform_relay = ["__swc", "__swc_custom_transform", "swc_relay"]
__swc_transform_modularize_imports = [
  "__swc",
  "__swc_custom_transform",
  "modularize_imports",
]
__swc_testing = ["__swc", "testing"]

[lints]
workspace = true

[dependencies]
mdxjs = { optional = true, workspace = true }
modularize_imports = { optional = true, workspace = true }
styled_components = { optional = true, workspace = true }
styled_jsx = { optional = true, workspace = true }
swc_core = { optional = true, workspace = true }
swc_emotion = { optional = true, workspace = true }
swc_relay = { optional = true, workspace = true }
testing = { optional = true, workspace = true }

auto-hash-map = { optional = true, workspace = true }
swc-ast-explorer = { optional = true, workspace = true }
tracing-signpost = { optional = true, workspace = true }

node-file-trace = { optional = true, workspace = true }
nxpkg-tasks = { optional = true, workspace = true }
nxpkg-tasks-build = { optional = true, workspace = true }
nxpkg-tasks-bytes = { optional = true, workspace = true }
nxpkg-tasks-env = { optional = true, workspace = true }
nxpkg-tasks-fetch = { optional = true, workspace = true }
nxpkg-tasks-fs = { optional = true, workspace = true }
nxpkg-tasks-hash = { optional = true, workspace = true }
nxpkg-tasks-macros = { optional = true, workspace = true }
nxpkg-tasks-macros-shared = { optional = true, workspace = true }
nxpkg-tasks-malloc = { optional = true, workspace = true, default-features = false }
nxpkg-tasks-memory = { optional = true, workspace = true }
nxpkg-tasks-testing = { optional = true, workspace = true }
nxpkg-updater = { optional = true, workspace = true }
nxpkgpack = { optional = true, workspace = true }
nxpkgpack-bench = { optional = true, workspace = true }
nxpkgpack-build = { optional = true, workspace = true }
nxpkgpack-cli-utils = { optional = true, workspace = true }
nxpkgpack-core = { optional = true, workspace = true }
nxpkgpack-create-test-app = { optional = true, workspace = true }
nxpkgpack-css = { optional = true, workspace = true }
nxpkgpack-dev = { optional = true, workspace = true }
nxpkgpack-dev-server = { optional = true, workspace = true }
nxpkgpack-ecmascript = { optional = true, workspace = true }
nxpkgpack-ecmascript-hmr-protocol = { optional = true, workspace = true }
nxpkgpack-ecmascript-plugins = { optional = true, workspace = true, default-features = false }
nxpkgpack-ecmascript-runtime = { optional = true, workspace = true }
nxpkgpack-env = { optional = true, workspace = true }
nxpkgpack-image = { optional = true, workspace = true }
nxpkgpack-json = { optional = true, workspace = true }
nxpkgpack-mdx = { optional = true, workspace = true }
nxpkgpack-node = { optional = true, workspace = true }
nxpkgpack-static = { optional = true, workspace = true }
nxpkgpack-swc-utils = { optional = true, workspace = true }
nxpkgpack-test-utils = { optional = true, workspace = true }
nxpkgpack-tests = { optional = true, workspace = true }
