[package]
name = "nxpkgpack-cli"
version = "0.1.0"
description = "TBD"
license = "MPL-2.0"
edition = "2021"
autobenches = false

[[bin]]
name = "nxpkgpack-cli"
path = "src/main.rs"
bench = false

[lib]
bench = false

[[bench]]
name = "mod"
harness = false

[features]
# By default, we enable native-tls for reqwest via downstream transitive features.
# This is for the convenience of running daily dev workflows, i.e running
# `cargo xxx` without explicitly specifying features, not that we want to
# promote this as default backend. Actual configuration is done when building nxpkgpack-cli.
default = ["custom_allocator", "native-tls"]
serializable = []
tokio_console = [
  "dep:console-subscriber",
  "tokio/tracing",
  "nxpkg-tasks/tokio_tracing",
]
profile = []
custom_allocator = ["nxpkg-tasks-malloc/custom_allocator"]
native-tls = ["nxpkg-tasks-fetch/native-tls"]
rustls-tls = ["nxpkg-tasks-fetch/rustls-tls"]

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true, features = ["backtrace"] }
clap = { workspace = true, features = ["derive", "env"] }
console-subscriber = { workspace = true, optional = true }
criterion = { workspace = true, features = ["async_tokio"] }
dunce = { workspace = true }
futures = { workspace = true }
mime = { workspace = true }
once_cell = { workspace = true }
owo-colors = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
nxpkg-tasks = { workspace = true }
nxpkg-tasks-env = { workspace = true }
nxpkg-tasks-fetch = { workspace = true, default-features = false }
nxpkg-tasks-fs = { workspace = true }
nxpkg-tasks-malloc = { workspace = true, default-features = false }
nxpkg-tasks-memory = { workspace = true }
nxpkgpack = { workspace = true }
nxpkgpack-build = { workspace = true }
nxpkgpack-cli-utils = { workspace = true }
nxpkgpack-core = { workspace = true }
nxpkgpack-dev = { workspace = true }
nxpkgpack-dev-server = { workspace = true }
nxpkgpack-ecmascript-plugins = { workspace = true, features = [
  "transform_emotion",
] }
nxpkgpack-ecmascript-runtime = { workspace = true }
nxpkgpack-env = { workspace = true }
nxpkgpack-node = { workspace = true }
webbrowser = { workspace = true }

[dev-dependencies]
regex = { workspace = true }
nxpkgpack-bench = { workspace = true }

[build-dependencies]
nxpkg-tasks-build = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
tracing-signpost = { workspace = true }
