[package]
name = "nxpkgpack-dev-server"
version = "0.1.0"
description = "TBD"
license = "MPL-2.0"
edition = "2021"
autobenches = false

[lib]
bench = false

[features]
log_request_stats = []

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
async-compression = { workspace = true }
auto-hash-map = { workspace = true }
futures = { workspace = true }
hyper = { version = "0.14", features = ["full"] }
hyper-tungstenite = "0.9.0"
indexmap = { workspace = true, features = ["serde"] }
mime = { workspace = true }
mime_guess = "2.0.4"
once_cell = { workspace = true }
parking_lot = { workspace = true }
pin-project-lite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_qs = { workspace = true }
socket2 = "0.4.9"
tokio = { workspace = true }
tokio-stream = "0.1.9"
tokio-util = { workspace = true }
tracing = { workspace = true }
urlencoding = "2.1.2"

nxpkg-tasks = { workspace = true }
nxpkg-tasks-bytes = { workspace = true }
nxpkg-tasks-fs = { workspace = true }
nxpkg-tasks-hash = { workspace = true }
nxpkgpack-core = { workspace = true }
nxpkgpack-ecmascript = { workspace = true }
nxpkgpack-ecmascript-hmr-protocol = { workspace = true }
# TODO remove this dependency
nxpkgpack-cli-utils = { workspace = true }

[build-dependencies]
nxpkg-tasks-build = { workspace = true }
