[package]
name = "nxpkgpack-image"
version = "0.1.0"
description = "TBD"
license = "MPL-2.0"
edition = "2021"
autobenches = false

[lib]
bench = false

[features]

# [NOTE]: Before enable this, ensure this can build all of the target platforms we support.
avif = ["image/avif-decoder", "image/avif-encoder"]
webp = ["image/webp", "image/webp-encoder"]

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
base64 = "0.21.0"
image = { workspace = true, default-features = false, features = [
  "gif",
  "png",
  "jpeg",
  "ico",
  "bmp",
  "tga",
] }
indexmap = { workspace = true }
mime = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
nxpkg-tasks = { workspace = true }
nxpkg-tasks-fs = { workspace = true }
nxpkgpack-core = { workspace = true }

[build-dependencies]
nxpkg-tasks-build = { workspace = true }
