[package]
name = "nxpkgpack-mdx"
version = "0.1.0"
description = "TBD"
license = "MPL-2.0"
edition = "2021"
autobenches = false

[lib]
bench = false

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }

mdxjs = { workspace = true }

nxpkg-tasks = { workspace = true }
nxpkg-tasks-fs = { workspace = true }
nxpkgpack-core = { workspace = true }
nxpkgpack-ecmascript = { workspace = true }

[build-dependencies]
nxpkg-tasks-build = { workspace = true }
