[package]
name = "nxpkgpack-test-utils"
version = "0.1.0"
description = "TBD"
license = "MPL-2.0"
edition = "2021"
autobenches = false

[lib]
bench = false

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true, features = ["pattern"] }
serde = { workspace = true }
similar = "2.2.0"
nxpkg-tasks = { workspace = true }
nxpkg-tasks-fs = { workspace = true }
nxpkg-tasks-hash = { workspace = true }
nxpkgpack-cli-utils = { workspace = true }
nxpkgpack-core = { workspace = true }

[build-dependencies]
nxpkg-tasks-build = { workspace = true }
