[package]
name = "nxpkgpack-wasm"
version = "0.1.0"
description = "TBD"
license = "MPL-2.0"
edition = "2021"
autobenches = false

[lib]
bench = false

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
indexmap = { workspace = true }
indoc = { workspace = true }
serde = { workspace = true }
nxpkg-tasks = { workspace = true }
nxpkg-tasks-fs = { workspace = true }
nxpkg-tasks-hash = { workspace = true }
nxpkgpack-core = { workspace = true }
nxpkgpack-ecmascript = { workspace = true }
wasmparser = "0.110.0"
wat = "1.0.69"

[build-dependencies]
nxpkg-tasks-build = { workspace = true }
