[package]
name = "nxpkgrepo-ffi"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[lib]
crate-type = ["staticlib"]

[lints]
workspace = true

[dependencies]
directories = "4.0.1"
globwalk = { version = "0.1.0", path = "../nxpkgrepo-globwalk" }
prost = "0.11.6"
thiserror = { workspace = true }
nxpkgpath = { workspace = true }
nxpkgrepo-cache = { workspace = true }
nxpkgrepo-env = { workspace = true }
nxpkgrepo-fs = { workspace = true }
nxpkgrepo-lockfiles = { workspace = true }
nxpkgrepo-scm = { workspace = true }

[build-dependencies]
cbindgen = "0.24.3"
prost-build = "0.11.6"
