[package]
name = "nxpkgrepo-repository"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
globwalk = { version = "0.1.0", path = "../nxpkgrepo-globwalk" }
itertools = { workspace = true }
lazy-regex = "2.5.0"
node-semver = "2.1.0"
petgraph = { workspace = true }
regex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = "1.0.38"
tracing.workspace = true
nxpkgpath = { workspace = true }
nxpkgrepo-graph-utils = { path = "../nxpkgrepo-graph-utils" }
nxpkgrepo-lockfiles = { workspace = true }
wax = { workspace = true }
which = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
test-case = { workspace = true }
